--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "build": "npm run build_ui & npm run build_code"
   },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.65.0",
+    "@figma/plugin-typings": "^1.90.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
-    "svelte": "^3.58.0",
+    "svelte": "^4.2.12",
     "svelte-check": "^3.3.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
@@ -23,6 +23,6 @@
     "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
-    "figsvelte": "^0.0.4"
+    "figblocks": "^0.0.2"
   }
 }
